--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "nrg-tracker",
+  "name": "frc-rank-tracker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://trevorkw7.github.io/frc-rank-tracker/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "axios": "^1.3.6",
@@ -23,6 +26,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
   }
